fixing all css for overlapping issues

--- a/frontend/src/css/informations.css
+++ b/frontend/src/css/informations.css
@@ -1,5 +1,5 @@
 /*----------------------------------- INFORMATIONS -------------------------------------------------------- */
-h1 {
+div.Informations h1 {
 	font-size: calc(1em + 1vw);
 }
 
